# templatelib

./: .gitignore  CMakeLists.txt  element-rule.md  linux.toolchain.cmake  seperate_logic.md  test.vtk
src/: CMakeLists.txt  database.hpp  global_datatype.h  hexmodu.cpp  hexmodu.hpp  modusurface.cpp  modusurface.hpp  quicklist.hpp  templatematch.cpp  variaty.h  worker.cpp
src/reference/: SeperatedPolyhedron.cpp  SeperatedPolyhedron.h  polygon.cpp  polygon.h  polyhedron.cpp  polyhedron.h  pyramid.cpp  resource.h  topoPtr.cpp  topoPtr.h  topology.cpp  topology.h
tools/: modu-sum.py
